[PAGOPA-3049] update node monitor to include in count only stations in cache